@@ -326,8 +326,8 @@ class Report(ProblemReport):
             command = ['gdb', '--batch']
             if debugdir:
                 command += ['--ex', 'set debug-file-directory ' + debugdir]
-            command += ['--ex', 'file ' + self['ExecutablePath'], '--ex',
-            'core-file ' + core]
+            command += ['--ex', 'file ' + self.get('InterpreterPath',
+                self['ExecutablePath']), '--ex', 'core-file ' + core]
 	    value_keys = []
             for name, cmd in gdb_reports.iteritems():
 		value_keys.append(name)
@@ -740,6 +740,51 @@ class _ApportReportTest(unittest.TestCase):
         self.assert_(pr['ThreadStacktrace'].find('#0  0x') > 0)
         self.assert_(pr['ThreadStacktrace'].find('Thread 1 (process %i)' % pid) > 0)
         self.assert_(pr['Disassembly'].find('Dump of assembler code from 0x') >= 0)
+
+    def test_add_gdb_info_script(self):
+        '''Test add_gdb_info() behaviour with a script.'''
+
+        pr = Report()
+        # should not throw an exception for missing fields
+        pr.add_gdb_info()
+
+        # create a test executable
+        test_executable = '/bin/zgrep'
+        assert os.access(test_executable, os.X_OK), test_executable + ' is not executable'
+        pid = os.fork()
+        if pid == 0:
+            os.setsid()
+            os.execv(test_executable, [test_executable, 'x'])
+            assert False, 'Could not execute ' + test_executable
+
+        # generate a core dump
+        (fd, coredump) = tempfile.mkstemp()
+        try:
+            os.close(fd)
+            assert subprocess.call(['gdb', '--batch', '--ex', 'generate-core-file '
+                + coredump, test_executable, str(pid)], stdout=subprocess.PIPE,
+                stderr=subprocess.PIPE) == 0
+
+            # verify that it's a proper ELF file
+            assert subprocess.call(['readelf', '-n', coredump],
+                stdout=subprocess.PIPE) == 0
+
+            # kill test executable
+            os.kill(pid, signal.SIGKILL)
+
+            pr['InterpreterPath'] = '/bin/sh'
+            pr['ExecutablePath'] = test_executable
+            pr['CoreDump'] = (coredump,)
+
+            pr.add_gdb_info()
+        finally:
+            os.unlink(coredump)
+
+        self.assert_(pr.has_key('Stacktrace'))
+        self.assert_(pr.has_key('ThreadStacktrace'))
+        self.assert_(pr.has_key('StacktraceTop'))
+        self.assert_(pr.has_key('Registers'))
+        self.assert_('from /lib/libc.so' in pr['Stacktrace'])
 
     def test_search_bug_patterns(self):
         '''Test search_bug_patterns() behaviour.'''
