@@ -9,8 +9,11 @@ apport (0.36) UNRELEASED; urgency=low
     for it when it is in the background.
   * gtk/apport-gtk.glade: Restore vertical padding of bug report dialog labels
     (another Glade 3 transition regression).
+  * bin/apport-retrace, apport/report.py: Call gdb on InterpreterPath if
+    present; calling it on a script does not yield anything useful. Add a test
+    case to report.py.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu,  4 Jan 2007 18:30:34 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu,  4 Jan 2007 19:58:28 +0100
 
 apport (0.35) feisty; urgency=low
 
